Bug 458211 - Highlighted session item in session manager is sometimes replaced with text input prompt
Summary: Highlighted session item in session manager is sometimes replaced with text i...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.1.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-08-23 15:05 UTC by tomtomtomreportingin
Modified: 2022-09-05 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2022-08-23 15:05:15 UTC
SUMMARY
If the user opens a session (whether through autoloading session on start or through the session manager), then opens the session manager, the highlighted session item appears to be some kind of text input prompt. This prompt disappears when clicking elsewhere.

STEPS TO REPRODUCE
1. Open the session manager.
2. Open a session by double clicking.
3. Open the session manager again.

OBSERVED RESULT
The selected session item is some kind of text input prompt.

EXPECTED RESULT
The selected session item should show its used name.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.12.12 (appimage)
Comment 1 tomtomtomreportingin 2022-08-23 15:22:22 UTC
Seems to be a regression of 5.0.
Comment 2 Bug Janitor Service 2022-08-23 16:02:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1553
Comment 3 Dmitry Kazakov 2022-09-05 14:28:33 UTC
Git commit e9ac0ac4e0d7b4b4541fa355d445d53b69f15365 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 05/09/2022 at 14:26.
Pushed by dkazakov into branch 'master'.

Don't allow text edit in Sessions list

Also check if new Session has a name before adding.

M  +2    -0    libs/ui/dialogs/KisSessionManagerDialog.cpp

https://invent.kde.org/graphics/krita/commit/e9ac0ac4e0d7b4b4541fa355d445d53b69f15365
Comment 4 Dmitry Kazakov 2022-09-05 14:28:59 UTC
Git commit 166fa488d89cb9dfd9e92ec4c515a5149be93ae5 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 05/09/2022 at 14:28.
Pushed by dkazakov into branch 'krita/5.1'.

Don't allow text edit in Sessions list

Also check if new Session has a name before adding.

(cherry picked from commit e9ac0ac4e0d7b4b4541fa355d445d53b69f15365)

M  +2    -0    libs/ui/dialogs/KisSessionManagerDialog.cpp

https://invent.kde.org/graphics/krita/commit/166fa488d89cb9dfd9e92ec4c515a5149be93ae5