Don't allow text edit in Sessions list

Also check if new Session has a name before adding.

BUG:458211

(cherry picked from commit e9ac0ac4e0d7b4b4541fa355d445d53b69f15365)